--- a/html.html
+++ b/html.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="https://ttrshax.github.io/scripts/style.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/TTRSHAX/scripts/main/style.css">
 <div class="men">HI</div>
