--- a/html.html
+++ b/html.html
@@ -1,1 +1,4 @@
-<div style="position: fixed;top: 20px;left: 30%;z-index: 99 !important; color: white;"><button id="0">HI</button></div>
+<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-solid.css">
+<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-regular.css">
+<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
+<div style="position: fixed;top: 20px;left: 50%;z-index: 99 !important; color: white;"><button id="0"><i class="fa-duotone fa-play-pause"></i></button></div>
