add repete button

--- a/html.html
+++ b/html.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-solid.css">
 <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-regular.css">
 <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
-<div style="position: fixed;top: 20px;left: 50%;z-index: 99 !important; color: white;"><button id="0"><i class="fa-duotone fa-play-pause"></i></button></div>
+<div style="position: fixed;top: 20px;left: 50%;z-index: 99 !important; color: white;"><button id="0"><i class="fa-duotone fa-play-pause"></i></button><button id="1"><i class="fa-duotone fa-repeat"></i></button></div>
