--- a/html.html
+++ b/html.html
@@ -19,6 +19,7 @@
     color: white;
   "
 >
-  <button id="0"><i class="fa-duotone fa-play-pause"></i></button>
+  <button id="0"><i class="fa-duotone fa-play-pause"></i></button
+  >&nbsp;&nbsp;&nbsp;
   <button id="1"><i class="fa-duotone fa-repeat"></i></button>
 </div>
